Change constants for open sourcing.